--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.6.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.553.0",
@@ -19,6 +20,7 @@
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
+    "react-i18next": "^16.3.3",
     "tailwindcss-rtl": "^0.9.0"
   },
   "devDependencies": {
