--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "react-i18next": "^16.3.3",
+    "rss-parser": "^3.13.0",
     "tailwindcss-rtl": "^0.9.0"
   },
   "devDependencies": {
