--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,22 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
+    - name: Bump version (patch)
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        npm version patch --no-git-tag-version
+        git add package.json
+        git commit -m "chore: bump version [skip ci]" || echo "No version change"
+    
+    - name: Push version bump
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
+    
     - name: Run linter
       run: npm run lint
       continue-on-error: true
