--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,11 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         npm version patch --no-git-tag-version
+        NEW_VERSION=$(node -p "require('./package.json').version")
+        echo "New version: $NEW_VERSION"
+        echo "VERSION=$NEW_VERSION" >> $GITHUB_ENV
         git add package.json
-        git commit -m "chore: bump version [skip ci]" || echo "No version change"
+        git commit -m "chore: bump version to v$NEW_VERSION [skip ci]" || echo "No version change"
     
     - name: Push version bump
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
