--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "version:major": "npm version major --no-git-tag-version"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "i18next": "^25.6.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
